# ksp-bench

./: .gitignore  README.md  opencode.json  plan.md  pyproject.toml  setup.md  tasks.md  tech-notes.md
.opencode/agents/: ksp.md
.opencode/ksp/krpc_reference/: README.md
.opencode/tools/: bash.ts
baselines/: gravity_turn.py  live_gravity_turn.py  noop.py
bench/: __init__.py  agent_adapters.py  artifacts.py  backfill_costs.py  cli.py  config.py  krpc_client.py  ksp_call.py  ksp_process.py  ksp_task.py  ksp_worker.py  live.py  public_results.py  recording.py  scoring.py  telemetry.py  termination.py  usage.py
env/ckan/: ksp-bench-v0.ckan
mcp/: server.ts
scenarios/: kerbin_orbit_80km.toml  kerbin_orbit_80km.yaml
src/kspbench/: agent_adapters.py  artifacts.py  cli.py  config.py  krpc_client.py  live.py  scoring.py  sdk.py  simple_yaml.py  telemetry.py
src/kspbench/prompts/: __init__.py  live_external.md
tests/: test_agent_adapters.py  test_artifacts.py  test_backfill_costs.py  test_cli.py  test_config.py  test_krpc_client.py  test_live_tools.py  test_public_results.py  test_recording.py  test_scoring.py  test_usage.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
web/public/data/: benchmark.json  index.json
web/src/: App.tsx  index.css  types.ts
web/src/components/: Header.tsx  MagneticPointField.tsx  MetricTile.tsx  OrbitView.tsx  ResultsView.tsx  TimeCostView.tsx
web/src/data/: fallbackBenchmark.ts
web/src/lib/: altitudeAnimation.test.ts  altitudeAnimation.ts  data.ts  format.ts  trajectory.ts  (+1 more)
(+36 files in other folders)
