[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksp-bench"
version = "0.0.1"
description = "Embodied-agent benchmark harness for Kerbal Space Program missions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "KSP-bench contributors" }]
dependencies = []

[project.optional-dependencies]
ksp = ["krpc>=0.5.4"]

[project.scripts]
kspbench = "kspbench.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kspbench"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
